// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> Select 컴포넌트가 렌더링되는지 확인 1`] = `
<div>
  <div
    class="select-component"
    data-testid="select-component"
  >
    <div
      class="MuiAutocomplete-root"
      style="width: 300px;"
      tabindex="0"
    >
      <div
        class="MuiFormControl-root"
      >
        <div
          class="MuiInputBase-root false undefined"
        >
          <input
            class="MuiInputBase-input"
            placeholder="Movie"
            type="text"
            value=""
          />
          <div
            class="MuiAutocomplete-endAdornment"
          >
            <button
              class="MuiAutocomplete-clearIndicator undefined"
              data-testid="clear"
            >
              <svg>
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
            <button
              class="MuiAutocomplete-arrowIndicator"
              data-testid="toggle"
            >
              <svg>
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="base-popper-root false 0"
      data-testid="optionToggle"
    >
      <div
        class="base-popper-content"
      >
        <div
          class="option-item false"
          data-testid="option-list"
        >
          Option 1
        </div>
        <div
          class="option-item false"
          data-testid="option-list"
        >
          Option 2
        </div>
        <div
          class="option-item false"
          data-testid="option-list"
        >
          Option 3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select /> renders component correctly 1`] = `
<div>
  <div
    class="select-component"
  >
    <div
      class="MuiAutocomplete-root"
      style="width: 300px;"
      tabindex="0"
    >
      <div
        class="MuiFormControl-root"
      >
        <div
          class="MuiInputBase-root false undefined"
        >
          <input
            class="MuiInputBase-input"
            placeholder="Movie"
            type="text"
            value=""
          />
          <div
            class="MuiAutocomplete-endAdornment"
          >
            <button
              class="MuiAutocomplete-clearIndicator undefined"
            >
              <svg>
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
            <button
              class="MuiAutocomplete-arrowIndicator"
            >
              <svg>
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="base-popper-root false 0"
    >
      <div
        class="base-popper-content"
      >
        <div
          class="option-item false"
        >
          Option 1
        </div>
        <div
          class="option-item false"
        >
          Option 2
        </div>
        <div
          class="option-item false"
        >
          Option 3
        </div>
      </div>
    </div>
  </div>
</div>
`;
